files/gpu-cluster-policy.yaml
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  name: gpu-cluster-policy
spec:
  migManager:
    enabled: true
  operator:
    defaultRuntime: crio
    initContainer: {}
    runtimeClass: nvidia
  dcgm:
    enabled: true
  gfd: {}
  dcgmExporter:
    config:
      name: ''
  driver:
    licensingConfig:
      configMapName: licensing-config
      nlsEnabled: true
    enabled: true
    use_ocp_driver_toolkit: true
    imagePullSecrets:
      - ngc-secret
    certConfig:
      name: ''
    rdma:
      enabled: true
      useHostMofed: false
    repository: nvcr.io/nvaie
    kernelModuleConfig:
      name: ''
    repoConfig:
      configMapName: ''
    version: 510.47.03
    virtualTopology:
      config: ''
    image: 'vgpu-guest-driver-2-0'
  devicePlugin: {}
  mig:
    strategy: single
  validator:
    plugin:
      env:
        - name: WITH_WORKLOAD
          value: 'true'
  nodeStatusExporter:
    enabled: true
  daemonsets: {}
  toolkit:
    enabled: true
